test: 로또 번호는 생성 시 오름차순 정렬