@@ -14,14 +14,24 @@ public class WinningLottoDto {
         this.bonusNumber = bonusNumber;
     }
 
-
     public Lotto toLotto() {
+        // 문자열을 List<Integer>로 변환
         List<Integer> numbers = Arrays.stream(lottoWinningnumbersInput.split(","))
                 .map(String::trim)
                 .map(Integer::parseInt)
-                .collect(Collectors.toList());
+                .toList(); // Java 16+는 collect(Collectors.toList()) 대신 toList() 가능
+
+        // 정렬과 검증은 Lotto 생성자가 담당
         return new Lotto(numbers);
     }
+//
+//    public Lotto toLotto() {
+//        List<Integer> numbers = Arrays.stream(lottoWinningnumbersInput.split(","))
+//                .map(String::trim)
+//                .map(Integer::parseInt)
+//                .collect(Collectors.toList());
+//        return new Lotto(numbers);
+//    }
 
     public int getBonusNumber() {
         return bonusNumber;
